<resources>
    <string name="app_name">Projekt</string>
    <string name="title_activity_login">Zaloguj się</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj się</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Login niepoprawny</string>
    <string name="error_invalid_password">Hasło jest za krótkie</string>
    <string name="error_incorrect_password">Hasło niewłaściwe</string>
    <string name="error_field_required">Pole wymagane</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="owoce">Owoce</string>
    <string name="nabia">Nabiał</string>
    <string name="pieczywo">Pieczywo</string>
    <string name="warzywa">Warzywa</string>
    <string name="inne">Inne</string>
    <string name="kasze">Kasze</string>
    <string name="mi_so">Mięso</string>
    <string name="s_odycze">Słodycze</string>
    <string name="drawer_open">Otwórz panel nawigacyjny</string>
    <string name="drawer_close">Zamknij panel nawigacyjny</string>
</resources>
